Bug#548742 - Giving dropdown a bigger z-index
git-svn-id: https://socorro.googlecode.com/svn/trunk@1819 efcc4bdc-162a-0410-a8af-5b4b46c5376d

--- a/webapp-php/css/screen.css
+++ b/webapp-php/css/screen.css
@@ -208,7 +208,7 @@ body > h1 {
 		color: #303233;
 		font-size: 14px;
 		line-height: 1;
-		z-index: 1;
+		z-index: 2;
 		}
 		.product-nav .dropdown li {
 			display: block;
